# poppler__poppler-glibmm

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  configure.ac  poppler-glibmm.doap
codegen/: Makefile.am
codegen/extradefs/: generate_extra_defs_poppler-glib.cc
codegen/m4/: convert.m4  convert_poppler-glib.m4  filelist.am
doc/: Makefile.am
doc/reference/: Doxyfile.in
examples/: Makefile.am
examples/demo/: action-view.cc  action-view.h  annots.cc  annots.h  attachments.cc  attachments.h  auth-dialog.cc  auth-dialog.h  demo-window.cc  demo-window.h  find.cc  find.h  fonts.cc  fonts.h  forms.cc  forms.h  images.cc  images.h  info.cc  info.h  layers.cc  layers.h  links.cc  links.h  main.cc  outline.cc  outline.h  page-info.cc  page-info.h  print.cc  print.h  property-grid.cc  property-grid.h  render.cc  render.h  selections.cc  selections.h  text.cc  text.h  transitions.cc  (+3 more)
poppler-glib/: poppler-glibmm-uninstalled.pc.in  poppler-glibmm.h  poppler-glibmm.pc.in  poppler-glibmmconfig.h.in
poppler-glib/poppler-glibmm/: Makefile.am  filelist.am  init.cc  init.h  wrap_init.cc  wrap_init.h
poppler-glib/src/: Makefile.am  action.ccg  action.hg  annot.ccg  annot.hg  annot_callout_line.hg  annot_mapping.ccg  annot_mapping.hg  attachment.ccg  attachment.hg  color.ccg  color.hg  document.ccg  document.hg  error.hg  filelist.am  font_info.ccg  font_info.hg  fonts_iter.hg  form_field.ccg  form_field.hg  form_field_mapping.ccg  form_field_mapping.hg  image_mapping.ccg  image_mapping.hg  index_iter.hg  layer.hg  layers_iter.hg  link_mapping.ccg  link_mapping.hg  media.ccg  media.hg  movie.hg  page.ccg  page.hg  page_transition.hg  poppler-glib.defs  poppler-glib_docs.xml  poppler-glib_docs_override.xml  poppler-glib_enum.defs  (+9 more)
