## Copyright (c) 2010  Glenn Rice <glennrister@gmail.com>
##
## This file is part of poppler-glibmm.
##
## poppler-glibmm is free software: you can redistribute it and/or modify it
## under the terms of the GNU Lesser General Public License as published
## by the Free Software Foundation, either version 2.1 of the License,
## or (at your option) any later version.
##
## poppler-glibmm is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
## See the GNU Lesser General Public License for more details.
##
## You should have received a copy of the GNU Lesser General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.

binding_name    = poppler-glibmm
wrap_init_flags = --namespace=Poppler --parent_dir=poppler-glibmm

include $(srcdir)/filelist.am
include $(top_srcdir)/codegen/m4/filelist.am
include $(top_srcdir)/build/generate-binding.am
